flux/apps/hoyeslab/media/seerr/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: seerr
  namespace: media
  labels:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/instance: seerr
spec:
  strategy:
    # Recreate strategy required due to the ReadWriteOnce PVC
    type: Recreate
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: seerr
      app.kubernetes.io/instance: seerr
  template:
    metadata:
      labels:
        app.kubernetes.io/name: seerr
        app.kubernetes.io/instance: seerr
    spec:
      securityContext:
        fsGroup: 1000
        fsGroupChangePolicy: OnRootMismatch
      containers:
        - name: seerr
          image: ghcr.io/seerr-team/seerr:v3.5.0
          imagePullPolicy: IfNotPresent
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
            readOnlyRootFilesystem: false
            runAsNonRoot: true
            privileged: false
            runAsUser: 1000
            runAsGroup: 1000
            seccompProfile:
              type: RuntimeDefault
          resources:
            requests:
              cpu: "500m"
              memory: "512Mi"
            limits:
              cpu: "1000m"
              memory: "1Gi"
          ports:
            - name: http
              containerPort: 5055
              protocol: TCP
          volumeMounts:
            - mountPath: /app/config
              name: seerr-config
          livenessProbe:
            httpGet:
              path: /api/v1/settings/public
              port: http
            initialDelaySeconds: 20
            periodSeconds: 15
            timeoutSeconds: 3
          readinessProbe:
            httpGet:
              path: /api/v1/settings/public
              port: http
            initialDelaySeconds: 60
            periodSeconds: 15
            timeoutSeconds: 3

      volumes:
        - name: seerr-config
          persistentVolumeClaim:
            claimName: seerr-config
