flux/apps/hoyeslab/media/seerr/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: seerr
  namespace: media
spec:
  type: ClusterIP
  ports:
    - name: http
      port: 80
      targetPort: http
  selector:
    app.kubernetes.io/name: seerr
    app.kubernetes.io/instance: seerr
